Fix CSS syntax for text alignment in h1

--- a/bev/style.css
+++ b/bev/style.css
@@ -1,5 +1,5 @@
 h1 {
-	style="text-align: left;"
+	text-align: left;
 	margin-bottom: 2rem;
 }
 
